# Distributed_RTS_2

./: .gitignore  README.md  make.sh  pyproject.toml  requirements.txt  sitecustomize.py
cases/normalized/: README.md  test-case-1.json
configs/analysis/: default.yaml  strict_validation.yaml
configs/logging/: debug.yaml  default.yaml  quiet.yaml
configs/output/: default.yaml  full_trace.yaml
configs/simulation/: default.yaml  trace_off.yaml  trace_on.yaml
docs/architecture/: data_flow.md  decisions.md  module_boundaries.md  output_contracts.md
docs/case-format/: external_case_notes.md  normalized_case_schema.md
docs/development/: coding_standards.md  local_setup.md  testing.md
drts_tsn/: __init__.py
scripts/: clean_outputs.sh  generate_case_stub.sh  run_all_cases.sh  run_test_case_1.sh
src/drts_tsn/: __init__.py
tests/: conftest.py
tests/golden/: test_analysis_assignment_case.py  test_analysis_reference_case.py  test_placeholder.py
tests/integration/: test_analyze_pipeline.py  test_batch_run_pipeline.py  test_cli_entrypoint.py  test_compare_pipeline.py  test_run_case_pipeline.py  test_simulate_pipeline.py  test_submission_readiness_workflow.py
tests/unit/: test_analysis_baseline.py  test_analysis_contexts.py  test_analysis_formulas.py  test_analysis_preconditions.py  test_case_preparation.py  test_case_readiness.py  test_cbs_slope_normalization.py  test_cli_args.py  test_comparison_baseline.py  test_event_queue.py  test_external_case_parsing.py  test_imports.py  test_io_writers.py  test_run_layout.py  test_simulation_baseline.py  (+4 more)
(+192 files in other folders)
