[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drts-mini-project-2"
version = "0.1.0"
description = "Scaffold for TSN/CBS worst-case response-time analysis and simulation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "DRTS Mini Project Team" }
]
dependencies = [
  "pydantic>=2.6,<3.0",
  "PyYAML>=6.0,<7.0",
  "pandas>=2.2,<3.0",
  "numpy>=1.26,<3.0",
  "tabulate>=0.9,<1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
drts = "drts_tsn.cli.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
